force-app/main/default/objects/Initiative_Member__c/Initiative_Member__c.object-meta.xml
<CustomObject>
    <description>Holds the individuals opportunities comprising a specific initiative</description>
    <label>Initiative Member</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Initiative Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Initiative Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>