force-app/main/default/objects/Initiative_Member__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>Enter any specific comments for this initiative member</inlineHelpText>
    <label>Comments</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>