force-app/main/default/objects/Initiative_Member__c/fields/Initiative__c.field-meta.xml
<CustomField>
    <fullName>Initiative__c</fullName>
    <inlineHelpText>Select the initiative grouping together these opporunities</inlineHelpText>
    <label>Initiative</label>
    <referenceTo>Initiative__c</referenceTo>
    <relationshipLabel>Initiative Members</relationshipLabel>
    <relationshipName>Initiative_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>