force-app/main/default/objects/Initiative_Member__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <inlineHelpText>Select the Opportunities to be part of this initiative</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Initiative Members</relationshipLabel>
    <relationshipName>Initiative_Members</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>